--- a/Desktop/Crane/Project-Unify-iOS-App-master/Unify/BusinessCardView.xib
+++ b/Desktop/Crane/Project-Unify-iOS-App-master/Unify/BusinessCardView.xib
@@ -6,9 +6,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BusinessCardView" customModule="Unify" customModuleProvider="target">
+            <connections>
+                <outlet property="cardTypeLabel" destination="Xsk-eK-jnb" id="VS7-Ir-aMn"/>
+                <outlet property="contactImageView" destination="wod-pJ-Sb4" id="eTv-PI-KpW"/>
+                <outlet property="emailIconImage" destination="apc-Ra-90N" id="y0r-4l-PGy"/>
+                <outlet property="emailLabel" destination="L1L-tF-Ns7" id="uM4-zt-k6p"/>
+                <outlet property="mediaButton1" destination="2Pr-d8-cUC" id="c9d-hh-gTq"/>
+                <outlet property="mediaButton2" destination="YzK-av-Q9t" id="0KF-iR-4ok"/>
+                <outlet property="mediaButton3" destination="KyW-xi-M0c" id="l8s-8s-n5V"/>
+                <outlet property="mediaButton4" destination="woo-UI-cDv" id="p0p-Hl-hN6"/>
+                <outlet property="nameLabel" destination="JuO-kN-bXS" id="jHt-wL-92G"/>
+                <outlet property="optionalIconImage" destination="ZC2-mT-e4G" id="hMa-bs-Fip"/>
+                <outlet property="optionalLabel" destination="h99-DG-H8p" id="ttG-hY-pAT"/>
+                <outlet property="phoneIconImage" destination="ify-4N-hAm" id="0vf-OT-eaO"/>
+                <outlet property="phoneNumberLabel" destination="bMV-qs-Qva" id="HzE-PB-dgh"/>
+                <outlet property="view" destination="FgI-Xx-RTU" id="pnU-JN-rs5"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="FgI-Xx-RTU" customClass="BusinessCardView" customModule="Unify" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="FgI-Xx-RTU">
             <rect key="frame" x="0.0" y="0.0" width="327" height="215"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -17,49 +34,40 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="777-666-5555" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="bMV-qs-Qva">
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="TUh-De-h5W"/>
-                        <constraint firstAttribute="width" constant="128" id="yHA-Gf-dsC"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="555-555-5555" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="h99-DG-H8p">
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="EOx-l2-UXB"/>
-                        <constraint firstAttribute="width" constant="128" id="tVg-7Y-ywk"/>
+                        <constraint firstAttribute="height" constant="25" id="EOx-l2-UXB"/>
+                        <constraint firstAttribute="width" constant="138" id="tVg-7Y-ywk"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kfich7@gmail.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="L1L-tF-Ns7">
                     <constraints>
-                        <constraint firstAttribute="width" constant="128" id="SFb-d5-LXX"/>
-                        <constraint firstAttribute="height" constant="35" id="rTF-Mz-Jca"/>
+                        <constraint firstAttribute="width" constant="138" id="SFb-d5-LXX"/>
+                        <constraint firstAttribute="height" constant="25" id="rTF-Mz-Jca"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_call" translatesAutoresizingMaskIntoConstraints="NO" id="ify-4N-hAm">
                     <constraints>
-                        <constraint firstAttribute="width" constant="35" id="642-ao-czn"/>
-                        <constraint firstAttribute="height" constant="35" id="TFo-9g-rKD"/>
+                        <constraint firstAttribute="width" constant="20" id="642-ao-czn"/>
+                        <constraint firstAttribute="height" constant="20" id="TFo-9g-rKD"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_call" translatesAutoresizingMaskIntoConstraints="NO" id="ZC2-mT-e4G">
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="E8s-e7-Aah"/>
-                        <constraint firstAttribute="width" constant="35" id="LKY-YA-gHh"/>
+                        <constraint firstAttribute="height" constant="20" id="E8s-e7-Aah"/>
+                        <constraint firstAttribute="width" constant="20" id="LKY-YA-gHh"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="quickMail" translatesAutoresizingMaskIntoConstraints="NO" id="apc-Ra-90N">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_credits" translatesAutoresizingMaskIntoConstraints="NO" id="apc-Ra-90N">
                     <constraints>
-                        <constraint firstAttribute="height" constant="35" id="3bV-7c-y2C"/>
-                        <constraint firstAttribute="width" constant="35" id="bz7-of-r6A"/>
+                        <constraint firstAttribute="height" constant="20" id="3bV-7c-y2C"/>
+                        <constraint firstAttribute="width" constant="20" id="bz7-of-r6A"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="throwback" translatesAutoresizingMaskIntoConstraints="NO" id="wod-pJ-Sb4">
@@ -102,55 +110,49 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="777-666-5555" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="bMV-qs-Qva">
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="TUh-De-h5W"/>
+                        <constraint firstAttribute="width" constant="138" id="yHA-Gf-dsC"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <constraints>
                 <constraint firstItem="YOK-os-7zS" firstAttribute="top" secondItem="wod-pJ-Sb4" secondAttribute="bottom" constant="8" symbolic="YES" id="1Fc-q3-r4P"/>
                 <constraint firstItem="Xsk-eK-jnb" firstAttribute="top" secondItem="FgI-Xx-RTU" secondAttribute="top" constant="18" id="256-Ri-v5D"/>
-                <constraint firstItem="ZC2-mT-e4G" firstAttribute="top" secondItem="h99-DG-H8p" secondAttribute="top" id="5cS-BF-Z4N"/>
+                <constraint firstItem="ZC2-mT-e4G" firstAttribute="top" secondItem="h99-DG-H8p" secondAttribute="top" constant="2" id="5cS-BF-Z4N"/>
                 <constraint firstItem="YOK-os-7zS" firstAttribute="leading" secondItem="FgI-Xx-RTU" secondAttribute="leading" constant="42" id="BlK-gr-bLf"/>
-                <constraint firstItem="YOK-os-7zS" firstAttribute="top" secondItem="apc-Ra-90N" secondAttribute="bottom" constant="22" id="CXZ-v0-h7f"/>
+                <constraint firstItem="YOK-os-7zS" firstAttribute="top" secondItem="apc-Ra-90N" secondAttribute="bottom" constant="37" id="CXZ-v0-h7f"/>
                 <constraint firstItem="bMV-qs-Qva" firstAttribute="leading" secondItem="h99-DG-H8p" secondAttribute="leading" id="Izc-io-8sM"/>
                 <constraint firstItem="YOK-os-7zS" firstAttribute="top" secondItem="FgI-Xx-RTU" secondAttribute="top" constant="178" id="NzJ-h4-Oqx"/>
                 <constraint firstItem="ZC2-mT-e4G" firstAttribute="leading" secondItem="apc-Ra-90N" secondAttribute="leading" id="P1a-Ea-7Cc"/>
                 <constraint firstItem="h99-DG-H8p" firstAttribute="leading" secondItem="L1L-tF-Ns7" secondAttribute="leading" id="PoK-Iv-Fud"/>
-                <constraint firstItem="apc-Ra-90N" firstAttribute="top" secondItem="ZC2-mT-e4G" secondAttribute="bottom" constant="3" id="Q6c-sW-ulq"/>
+                <constraint firstItem="apc-Ra-90N" firstAttribute="top" secondItem="ZC2-mT-e4G" secondAttribute="bottom" constant="13" id="Q6c-sW-ulq"/>
                 <constraint firstItem="JuO-kN-bXS" firstAttribute="leading" secondItem="ify-4N-hAm" secondAttribute="leading" id="RSA-VO-dT5"/>
                 <constraint firstAttribute="trailing" secondItem="JuO-kN-bXS" secondAttribute="trailing" id="XVd-vU-end"/>
-                <constraint firstItem="ify-4N-hAm" firstAttribute="top" secondItem="JuO-kN-bXS" secondAttribute="bottom" constant="8" symbolic="YES" id="Yxz-8u-yXL"/>
-                <constraint firstItem="ify-4N-hAm" firstAttribute="top" secondItem="bMV-qs-Qva" secondAttribute="top" id="b3b-D5-hB5"/>
+                <constraint firstItem="ify-4N-hAm" firstAttribute="top" secondItem="JuO-kN-bXS" secondAttribute="bottom" constant="18" id="Yxz-8u-yXL"/>
+                <constraint firstItem="ify-4N-hAm" firstAttribute="top" secondItem="bMV-qs-Qva" secondAttribute="top" constant="2" id="b3b-D5-hB5"/>
                 <constraint firstItem="wod-pJ-Sb4" firstAttribute="leading" secondItem="FgI-Xx-RTU" secondAttribute="leading" id="bCp-x6-xkC"/>
-                <constraint firstItem="bMV-qs-Qva" firstAttribute="leading" secondItem="ify-4N-hAm" secondAttribute="trailing" constant="8" symbolic="YES" id="dxs-yA-k0H"/>
+                <constraint firstItem="bMV-qs-Qva" firstAttribute="leading" secondItem="ify-4N-hAm" secondAttribute="trailing" constant="6" id="dxs-yA-k0H"/>
                 <constraint firstAttribute="bottom" secondItem="YOK-os-7zS" secondAttribute="bottom" constant="6" id="fRH-Z1-FKM"/>
                 <constraint firstAttribute="trailing" secondItem="YOK-os-7zS" secondAttribute="trailing" constant="33" id="gvH-Ff-MQW"/>
                 <constraint firstItem="Xsk-eK-jnb" firstAttribute="leading" secondItem="wod-pJ-Sb4" secondAttribute="leading" id="iQT-pn-N6V"/>
                 <constraint firstItem="JuO-kN-bXS" firstAttribute="top" secondItem="FgI-Xx-RTU" secondAttribute="top" constant="16" id="kL9-TI-hEg"/>
-                <constraint firstItem="ZC2-mT-e4G" firstAttribute="top" secondItem="ify-4N-hAm" secondAttribute="bottom" constant="3" id="lj2-84-KK9"/>
-                <constraint firstItem="JuO-kN-bXS" firstAttribute="trailing" secondItem="bMV-qs-Qva" secondAttribute="trailing" id="mpL-V6-UAI"/>
+                <constraint firstItem="ZC2-mT-e4G" firstAttribute="top" secondItem="ify-4N-hAm" secondAttribute="bottom" constant="13" id="lj2-84-KK9"/>
+                <constraint firstItem="JuO-kN-bXS" firstAttribute="trailing" secondItem="bMV-qs-Qva" secondAttribute="trailing" constant="7" id="mpL-V6-UAI"/>
                 <constraint firstItem="ify-4N-hAm" firstAttribute="leading" secondItem="ZC2-mT-e4G" secondAttribute="leading" id="n4i-FH-xHc"/>
-                <constraint firstItem="apc-Ra-90N" firstAttribute="top" secondItem="L1L-tF-Ns7" secondAttribute="top" id="sFp-Ob-a6e"/>
+                <constraint firstItem="apc-Ra-90N" firstAttribute="top" secondItem="L1L-tF-Ns7" secondAttribute="top" constant="2" id="sFp-Ob-a6e"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="cardTypeLabel" destination="Xsk-eK-jnb" id="X3J-V0-s7K"/>
-                <outlet property="contactImageView" destination="wod-pJ-Sb4" id="Qhf-G9-8qh"/>
-                <outlet property="emailIconImage" destination="apc-Ra-90N" id="Pge-QB-SvY"/>
-                <outlet property="emailLabel" destination="L1L-tF-Ns7" id="c9l-ev-4QF"/>
-                <outlet property="mediaButton1" destination="2Pr-d8-cUC" id="04S-u3-yyA"/>
-                <outlet property="mediaButton2" destination="YzK-av-Q9t" id="yZ0-rc-447"/>
-                <outlet property="mediaButton3" destination="KyW-xi-M0c" id="LC4-2u-68i"/>
-                <outlet property="mediaButton4" destination="woo-UI-cDv" id="z9K-kB-5QF"/>
-                <outlet property="nameLabel" destination="JuO-kN-bXS" id="NOA-Ef-UCV"/>
-                <outlet property="optionalIconImage" destination="ZC2-mT-e4G" id="JbH-oJ-PQN"/>
-                <outlet property="optionalLabel" destination="h99-DG-H8p" id="5kU-OE-GEb"/>
-                <outlet property="phoneIconImage" destination="ify-4N-hAm" id="yej-Jj-snx"/>
-                <outlet property="phoneNumberLabel" destination="bMV-qs-Qva" id="9vw-eQ-sOe"/>
-            </connections>
             <point key="canvasLocation" x="-309.5" y="-196.5"/>
         </view>
     </objects>
     <resources>
         <image name="ic_call" width="24" height="24"/>
-        <image name="quickMail" width="1353" height="903"/>
+        <image name="ic_credits" width="24" height="24"/>
         <image name="throwback" width="604" height="453"/>
     </resources>
 </document>
