--- a/Desktop/Crane/Project-Unify-iOS-App-master/Unify/ContactCardView.xib
+++ b/Desktop/Crane/Project-Unify-iOS-App-master/Unify/ContactCardView.xib
@@ -6,9 +6,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContactCardView" customModule="Unify" customModuleProvider="target">
+            <connections>
+                <outlet property="contactImageView" destination="ePR-xZ-fJa" id="K2H-ks-nG0"/>
+                <outlet property="emailIconImage" destination="DY9-HL-eSn" id="Zd5-ti-Hmn"/>
+                <outlet property="emailLabel" destination="n2D-8m-4pd" id="2AI-oR-X4B"/>
+                <outlet property="infoLabel" destination="Fti-e3-5hd" id="5ST-Xw-Mxb"/>
+                <outlet property="mediaButton1" destination="OJ9-bL-vez" id="iPP-5d-tM9"/>
+                <outlet property="mediaButton2" destination="hb7-ts-XiO" id="fkE-vU-R3W"/>
+                <outlet property="mediaButton3" destination="Uci-Vb-8Cb" id="444-Ox-hOy"/>
+                <outlet property="mediaButton4" destination="K55-k0-YRq" id="q9v-4l-7W7"/>
+                <outlet property="nameLabel" destination="Ze0-qy-dmA" id="2Oo-em-7wa"/>
+                <outlet property="phoneIconImage" destination="RzB-ME-RqC" id="0R9-vl-4Ms"/>
+                <outlet property="phoneNumberLabel" destination="GhE-gL-Ie9" id="Han-Lo-AkX"/>
+                <outlet property="socialMediaContainerView" destination="8oj-2J-g9g" id="TK6-Hr-wOZ"/>
+                <outlet property="view" destination="VP7-KV-xN0" id="vyx-KN-cGD"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="VP7-KV-xN0" customClass="ContactCardView" customModule="Unify" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="VP7-KV-xN0">
             <rect key="frame" x="0.0" y="0.0" width="327" height="215"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -17,7 +33,7 @@
                         <constraint firstAttribute="height" constant="20" id="law-RY-zZP"/>
                         <constraint firstAttribute="width" constant="141" id="nRR-MN-S5r"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -26,7 +42,7 @@
                         <constraint firstAttribute="width" constant="141" id="dVP-pn-jIO"/>
                         <constraint firstAttribute="height" constant="20" id="sTI-5O-Cgu"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -36,7 +52,7 @@
                         <constraint firstAttribute="height" constant="20" id="ti1-gs-GBu"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="quickMail" translatesAutoresizingMaskIntoConstraints="NO" id="DY9-HL-eSn">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_credits" translatesAutoresizingMaskIntoConstraints="NO" id="DY9-HL-eSn">
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="So4-l0-xLm"/>
                         <constraint firstAttribute="height" constant="20" id="uA2-CO-ARn"/>
@@ -64,8 +80,8 @@
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a little blurb about whatever job the person has or is doing " lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fti-e3-5hd">
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a little blurb about whatever job the person has or is doing " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.65000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="Fti-e3-5hd">
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -108,51 +124,37 @@
             </subviews>
             <constraints>
                 <constraint firstItem="Ze0-qy-dmA" firstAttribute="top" secondItem="VP7-KV-xN0" secondAttribute="top" id="09w-4B-py5"/>
-                <constraint firstAttribute="bottom" secondItem="8oj-2J-g9g" secondAttribute="bottom" id="3h0-0f-Ztm"/>
+                <constraint firstAttribute="bottom" secondItem="8oj-2J-g9g" secondAttribute="bottom" constant="6" id="3h0-0f-Ztm"/>
                 <constraint firstItem="8oj-2J-g9g" firstAttribute="centerX" secondItem="DY9-HL-eSn" secondAttribute="centerX" id="4QI-eV-nnU"/>
                 <constraint firstItem="8oj-2J-g9g" firstAttribute="centerX" secondItem="RzB-ME-RqC" secondAttribute="centerX" id="5sT-ie-ad3"/>
                 <constraint firstItem="Ze0-qy-dmA" firstAttribute="trailing" secondItem="ePR-xZ-fJa" secondAttribute="trailing" id="A9E-hQ-xsC"/>
                 <constraint firstItem="Ze0-qy-dmA" firstAttribute="leading" secondItem="ePR-xZ-fJa" secondAttribute="leading" id="ASV-Bh-YTT"/>
                 <constraint firstItem="DY9-HL-eSn" firstAttribute="top" secondItem="RzB-ME-RqC" secondAttribute="bottom" constant="7" id="AgW-C0-dU9"/>
-                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="n2D-8m-4pd" secondAttribute="bottom" constant="8" symbolic="YES" id="BbT-8G-87k"/>
+                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="n2D-8m-4pd" secondAttribute="bottom" constant="22" id="BbT-8G-87k"/>
                 <constraint firstItem="Fhx-4d-XQN" firstAttribute="top" secondItem="VP7-KV-xN0" secondAttribute="top" constant="32" id="Es3-EN-zLQ"/>
-                <constraint firstItem="RzB-ME-RqC" firstAttribute="top" secondItem="Fti-e3-5hd" secondAttribute="bottom" constant="8" symbolic="YES" id="FpH-qe-RXJ"/>
-                <constraint firstItem="Fti-e3-5hd" firstAttribute="trailing" secondItem="GhE-gL-Ie9" secondAttribute="trailing" id="I36-Jt-1m2"/>
-                <constraint firstItem="GhE-gL-Ie9" firstAttribute="leading" secondItem="RzB-ME-RqC" secondAttribute="trailing" constant="8" symbolic="YES" id="Ncx-Yk-OoM"/>
+                <constraint firstItem="RzB-ME-RqC" firstAttribute="top" secondItem="Fti-e3-5hd" secondAttribute="bottom" constant="8" id="FpH-qe-RXJ"/>
+                <constraint firstItem="Fti-e3-5hd" firstAttribute="trailing" secondItem="GhE-gL-Ie9" secondAttribute="trailing" constant="2" id="I36-Jt-1m2"/>
+                <constraint firstItem="GhE-gL-Ie9" firstAttribute="leading" secondItem="RzB-ME-RqC" secondAttribute="trailing" constant="6" id="Ncx-Yk-OoM"/>
                 <constraint firstItem="8oj-2J-g9g" firstAttribute="centerX" secondItem="VP7-KV-xN0" secondAttribute="centerX" id="Qe5-03-S17"/>
                 <constraint firstItem="Fhx-4d-XQN" firstAttribute="leading" secondItem="ePR-xZ-fJa" secondAttribute="trailing" constant="8" symbolic="YES" id="U1C-Gj-42a"/>
                 <constraint firstItem="RzB-ME-RqC" firstAttribute="top" secondItem="GhE-gL-Ie9" secondAttribute="top" id="V19-Cm-2Wg"/>
                 <constraint firstItem="GhE-gL-Ie9" firstAttribute="leading" secondItem="n2D-8m-4pd" secondAttribute="leading" id="Vtw-ce-EOB"/>
                 <constraint firstItem="8oj-2J-g9g" firstAttribute="leading" secondItem="VP7-KV-xN0" secondAttribute="leading" constant="37" id="WoM-EF-Hvk"/>
                 <constraint firstAttribute="trailing" secondItem="Fhx-4d-XQN" secondAttribute="trailing" constant="53" id="apc-oW-CGp"/>
-                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="DY9-HL-eSn" secondAttribute="bottom" constant="8" symbolic="YES" id="dBp-5g-q4L"/>
-                <constraint firstItem="Fti-e3-5hd" firstAttribute="top" secondItem="Fhx-4d-XQN" secondAttribute="bottom" constant="8" symbolic="YES" id="hAS-jp-H4A"/>
+                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="DY9-HL-eSn" secondAttribute="bottom" constant="22" id="dBp-5g-q4L"/>
+                <constraint firstItem="Fti-e3-5hd" firstAttribute="top" secondItem="Fhx-4d-XQN" secondAttribute="bottom" constant="8" id="hAS-jp-H4A"/>
                 <constraint firstItem="Ze0-qy-dmA" firstAttribute="leading" secondItem="VP7-KV-xN0" secondAttribute="leading" id="l6V-Vd-yQr"/>
-                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="VP7-KV-xN0" secondAttribute="top" constant="184" id="oci-TB-EQl"/>
-                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="ePR-xZ-fJa" secondAttribute="bottom" constant="9" id="urY-h8-TcY"/>
+                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="VP7-KV-xN0" secondAttribute="top" constant="178" id="oci-TB-EQl"/>
+                <constraint firstItem="8oj-2J-g9g" firstAttribute="top" secondItem="ePR-xZ-fJa" secondAttribute="bottom" constant="3" id="urY-h8-TcY"/>
                 <constraint firstItem="Fhx-4d-XQN" firstAttribute="leading" secondItem="Fti-e3-5hd" secondAttribute="leading" id="zbS-Em-ogs"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="contactImageView" destination="ePR-xZ-fJa" id="ddj-tQ-p6Z"/>
-                <outlet property="emailIconImage" destination="DY9-HL-eSn" id="Zce-2e-ke1"/>
-                <outlet property="emailLabel" destination="n2D-8m-4pd" id="5fP-f5-a2C"/>
-                <outlet property="infoLabel" destination="Fti-e3-5hd" id="6tP-hE-hAs"/>
-                <outlet property="mediaButton1" destination="OJ9-bL-vez" id="u8N-6Z-I95"/>
-                <outlet property="mediaButton2" destination="hb7-ts-XiO" id="dWK-hf-jAc"/>
-                <outlet property="mediaButton3" destination="Uci-Vb-8Cb" id="nGO-rI-Zm8"/>
-                <outlet property="mediaButton4" destination="K55-k0-YRq" id="NEw-DO-jS0"/>
-                <outlet property="nameLabel" destination="Ze0-qy-dmA" id="u4b-tR-OqF"/>
-                <outlet property="phoneIconImage" destination="RzB-ME-RqC" id="RFO-QG-L7N"/>
-                <outlet property="phoneNumberLabel" destination="GhE-gL-Ie9" id="lBx-Wx-fkO"/>
-                <outlet property="socialMediaContainerView" destination="8oj-2J-g9g" id="gzW-PD-jUS"/>
-            </connections>
             <point key="canvasLocation" x="-375.5" y="-179.5"/>
         </view>
     </objects>
     <resources>
         <image name="ic_call" width="24" height="24"/>
-        <image name="quickMail" width="1353" height="903"/>
+        <image name="ic_credits" width="24" height="24"/>
         <image name="throwback" width="604" height="453"/>
     </resources>
 </document>
